# Biblos

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.svelte  app.pcss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: epub.rs  home.rs  library.rs  main.rs  settings.rs
src/components/: BookCover.svelte  Carousel.svelte  Dir.svelte  StackView.svelte  TreeView.svelte  search.svelte  stackview.svelte
src/pages/: BookReader.svelte  Home.svelte  Library.svelte
src/util/: book_parser.ts  styling.ts
testdata/: The Complete Works of Aristotle.epub
testdata/A Concise History of Switzerland/: content.opf  stylesheet.css  titlepage.xhtml  toc.ncx
testdata/A Concise History of Switzerland/text/: part0000.html  part0001.html  part0002.html  part0003_split_000.html  part0003_split_001.html  part0004.html  part0005.html  part0006.html  part0007.html  part0008.html  part0009.html  part0010.html  part0011.html  part0012.html  part0013.html  part0014.html  part0015.html  part0016.html  part0017.html  part0018.html  part0019.html  part0020.html  part0021.html  part0022.html  part0023.html  part0024_split_000.html  part0024_split_001.html
