[package]
name = "svelte-epub12"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rbook = "0.5.0"
zip = "2.2.0"
quick-xml = "0.36.2         "
lazy_static = "1.4.0"
csv = "1.3.0"
base64 = "0.22.0"
xx-hash = "0.3.1"
walkdir = "2.5.0"
itertools = "0.13.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib", "lib"]
